added contact me

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : # "PhD Candidate in Operation and Supply Chain Management"
 name                     : "Mohammadreza Shahsahebi"
 description              : "Personal website of Mohammadreza Shahsahebi, PhD Candidate in Operation and Supply Chain Management at the University of Calgary."
-url                      : "https://mohamadre3a.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://shahsahebi.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
